--- a/travel.html
+++ b/travel.html
@@ -34,7 +34,34 @@
     </header>
 
     <main>
+      <div class="banner">
+        <h2 class="banner-title">Explore Your Travel</h2>
+      <p class="banner-text">A serene lake setting becomes even more picturesque with the addition of a charming wooden bridge gracefully arcing over its tranquil waters. This rustic bridge, crafted from sturdy timber, complements the natural beauty of the surroundings.</p>
+      <form action="">
+        <input class="inputs weight-problem" id="border-problem" type="text" name="" id="" placeholder="Where go">
 
+        <select class="inputs weight-problem" name="time" placeholder="When">
+            <option value=""  disabled selected hidden>When</option>
+            <option value="Winter">Winter</option>
+            <option value="Autumn">Autumn</option>
+            <option value="Summer">Summer</option>
+            <option value="Spring">Spring</option>
+          </select>
+
+          <select class="inputs weight-problem" name="time" placeholder="Select Type">
+            <!-- need to adjust the weights -->
+            <option value="Select Type" disabled selected hidden>Select Type</option>
+            <option value="Winter">Relaxing </option>
+            <option value="Autumn">Stressful</option>
+            <option value="Summer">Adventure</option>
+            <option value="Spring">Romantic</option>
+            <option value="Spring">Nostalgic</option>
+          </select>
+          
+          <button class="btn-primary" id="line"><img src="Images/Frame.png" alt="">
+          <p>Find Now</p></button>
+          
+    </form>
     </main>
     <footer>
 
