popular section done

--- a/travel.html
+++ b/travel.html
@@ -34,6 +34,7 @@
     </header>
 
     <main>
+      <section> 
       <div class="banner">
         <h2 class="banner-title">Explore Your Travel</h2>
       <p class="banner-text">A serene lake setting becomes even more picturesque with the addition of a charming wooden bridge gracefully arcing over its tranquil waters. This rustic bridge, crafted from sturdy timber, complements the natural beauty of the surroundings.</p>
@@ -62,6 +63,35 @@
           <p>Find Now</p></button>
           
     </form>
+    </div>
+  </section> 
+
+  <section>
+    <div class="Populars">
+      <div class="Popular-content">
+        <h2 class="Popular-title">Our Popular Tours</h2>
+        <p class="Popular-description">
+          Bangladesh, with its rich cultural heritage and diverse landscapes, offers a range of popular tours that showcase the country's unique charm and beauty. Explore the vibrant tapestry of experiences with our top-rated tours:
+        </p>
+        <ul>
+          <li class="Popular-description">Sundarbans Mangrove Forest:
+            Embark on an unforgettable journey to the Sundarbans, the world's largest mangrove forest and a UNESCO World Heritage Site.</li>
+          <li class="Popular-description">Historic Sonargaon:
+            Step back in time as you visit Sonargaon, a historic city that served as the medieval capital of Bengal. Immerse yourself in the remnants of ancient architecture, explore the Folk Arts and Crafts Museum, and stroll through picturesque landscapes.</li>
+          <li class="Popular-description">Cox's Bazar Beach:
+            Discover the allure of Cox's Bazar, home to the longest natural sea beach in the world. Enjoy the pristine sandy shores, indulge in water sports, and witness breathtaking sunsets over the Bay of Bengal.</li>
+        </ul>
+        <p class="Popular-description">
+          These popular tours encapsulate the essence of Bangladesh, offering a blend of nature, history, and cultural richness that promises an unforgettable travel experience.
+        </p>
+        <button class="common-btn">Read More</button>
+      </div>
+      <div class="tours-images">
+        <img src="Images/Rectangle 4.png" alt="">
+      </div>
+    </div>
+  </section>
+
     </main>
     <footer>
 
