destination section done

--- a/travel.html
+++ b/travel.html
@@ -91,7 +91,40 @@
       </div>
     </div>
   </section>
-
+  
+  <section>
+    
+    <div class="Destination-section">
+      <div class="Destination-text-section">
+        <h2 class="ccommon-title popular">Choose Your Destination</h2>
+        <p style="text-align: center;">Selecting your tour destination is a thrilling decision that opens the door to a world of diverse experiences and adventures. Whether you're drawn to the allure of historical landmarks, the tranquility of natural landscapes, or the vibrant tapestry of cultural gems, the choice is yours.</p>
+      </div>
+        <div class="container">
+          <div class="Maldives"><img src="Images/Rectangle 5.png" alt="">
+          <p class="place">Maldives</p>
+          </div>
+          
+          <div class="Indonesia"><img src="Images/Rectangle 8.png" alt="">
+          <p class="place">Indonesia</p>
+          </div>
+          <div class="Srilanka"><img src="Images/Rectangle 6.png" alt="">
+          <p class="place">Srilanka</p>
+          </div>
+          <div class="North-America"><img src="Images/Rectangle 7.png" alt="">
+          <p class="place">North-America</p>
+        </div>
+          <div class="Kashmir"><img src="Images/Rectangle 9.png" alt="">
+          <p class="place">Kashmir</p>
+        </div>
+          <div class="Bangladesh"><img src="Images/Rectangle 11.png" alt="">
+          <p class="place">Bangladesh</p>
+        </div>
+          <div class="Bandarban"><img src="Images/Rectangle 10.png" alt="">
+          <p class="place">Bandarban</p>
+        </div>
+        </div>
+    </div>
+  </section>
     </main>
     <footer>
 
