all sections done together

--- a/travel.html
+++ b/travel.html
@@ -125,9 +125,79 @@
         </div>
     </div>
   </section>
-    </main>
-    <footer>
 
+  <section>
+    <div class="Agency">
+      <div class="Destination-text-section">
+        <h2 class=" popular">Why Choose Our Travel Agency</h2>
+        <p class=" popular-text">Choosing our travel agency ensures an unparalleled journey filled with seamless experiences and unforgettable moments. We pride ourselves on crafting meticulously curated itineraries that cater to diverse preferences, be it adventurous escapades, cultural immersions, or tranquil getaways. Our team of dedicated travel experts is committed to providing personalized services, ensuring that every aspect of your trip exceeds expectations.</p>
+      </div>
+      <div class="card-section">
+        <div class="Handpicked-Hotels">
+          <img class="hotel-images" src="Images/hotel 1.png" alt="">
+          <h3 class="Handpicked-title">Handpicked Hotels</h3>
+          <p class="card-text">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+        </div>
+        <div class="Handpicked-Hotels card-two">
+          <img class="hotel-images" src="Images/map 1.png" alt="">
+          <h3 class="Handpicked-title">World Class Service</h3>
+          <p class="card-text">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+        </div>
+        <div class="Handpicked-Hotels card-three relative">
+          <img src="Images/price-tag 1.png" alt="">
+          <h3 class="Handpicked-title">Best Price Guarantee</h3>
+          <p class="card-text">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div class="blog">
+      <h1 class="blog-title">See travel blogs</h1>
+      <div class="blog-videos">
+        <video controls class="videos" width="600px" height="300px" src="Images/video1.mp4"></video>
+        <video controls class="videos" width="600px" height="300px"  src="Images/video2.mp4"></video>
+        <iframe class="videos" width="600" height="300" src="https://www.youtube.com/embed/HZWzn9geEqY?si=iEejz7bbbfcU6Chn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe class="videos" width="600" height="300" src="https://www.youtube.com/embed/puDBmnIXe_k?si=iTFOrJUodwR7bf7l" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </div>
+    </div>
+  </section>
+
+  <section class="overall-news">
+<div class="news">
+    <div class="news-content">
+    <h4 class="news-title">Newsletter</h4>
+    <p class="news-description">Get your daily dose of travel news & tips. Sign up today!</p>
+    
+    <form class="forming" action="">
+      <input class="sty" placeholder="Enter your name" type="text" name="" id="" required>
+    <input class="sty" placeholder="Enter your email" type="email" name="" id="" required>
+    <button  class="common-btn">Subscribe</button>
+    </form>
+  </div>
+
+  <div class="news-poster">
+    <img src="Images/Rectangle 8 (1).png" alt="">
+  </div>
+  </div>
+  </section>
+    </main>
+    <footer class="footer">
+      <div class="final">
+      <div class="pogo-section">
+        <img src="Images/travel.png" alt="">
+        <h1 class="pogo-title">Tr@vel <span class="ban">Ban</span><span class="glad">glad</span><span class="ban">esh</span></h1>
+      </div>
+      <div class="footer-des">
+        <p>Stay tuned with us. If you need us, you may google our websites or call in our phone numbers</p>
+      </div>
+
+      <div class="social-icons">
+        <img src="Images/Social.png" alt="">
+      </div>
+      <div class="last"><p>2024, All rights reserved</p></div>
+    </div>
     </footer>
     </body>
     </html>
