--- a/travel.html
+++ b/travel.html
@@ -169,7 +169,11 @@
     <div class="news-content">
     <h4 class="news-title">Newsletter</h4>
     <p class="news-description">Get your daily dose of travel news & tips. Sign up today!</p>
+    <div class="hori">
+      <br>
+    </div>
     
+
     <form class="forming" action="">
       <input class="sty" placeholder="Enter your name" type="text" name="" id="" required>
     <input class="sty" placeholder="Enter your email" type="email" name="" id="" required>
@@ -187,7 +191,7 @@
       <div class="final">
       <div class="pogo-section">
         <img src="Images/travel.png" alt="">
-        <h1 class="pogo-title">Tr@vel <span class="ban">Ban</span><span class="glad">glad</span><span class="ban">esh</span></h1>
+        <h5 class="pogo-title">Tr@vel <span class="ban">Ban</span><span class="glad">glad</span><span class="ban">esh</span></h5>
       </div>
       <div class="footer-des">
         <p>Stay tuned with us. If you need us, you may google our websites or call in our phone numbers</p>
@@ -195,6 +199,9 @@
 
       <div class="social-icons">
         <img src="Images/Social.png" alt="">
+      </div>
+      <div>
+        <hr>
       </div>
       <div class="last"><p>2024, All rights reserved</p></div>
     </div>
