--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <div class="Destination-section">
       <div class="Destination-text-section">
         <h2 class="ccommon-title popular">Choose Your Destination</h2>
-        <p style="text-align: center;">Selecting your tour destination is a thrilling decision that opens the door to a world of diverse experiences and adventures. Whether you're drawn to the allure of historical landmarks, the tranquility of natural landscapes, or the vibrant tapestry of cultural gems, the choice is yours.</p>
+        <p style="text-align: justify; margin: 10px auto; width: 80%;">Selecting your tour destination is a thrilling decision that opens the door to a world of diverse experiences and adventures. Whether you're drawn to the allure of historical landmarks, the tranquility of natural landscapes, or the vibrant tapestry of cultural gems, the choice is yours.</p>
       </div>
         <div class="container">
           <div class="Maldives"><img src="Images/Rectangle 5.png" alt="">
@@ -156,36 +156,35 @@
     <div class="blog">
       <h1 class="blog-title">See travel blogs</h1>
       <div class="blog-videos">
-        <video controls class="videos" width="600px" height="300px" src="Images/video1.mp4"></video>
-        <video controls class="videos" width="600px" height="300px"  src="Images/video2.mp4"></video>
-        <iframe class="videos" width="600" height="300" src="https://www.youtube.com/embed/HZWzn9geEqY?si=iEejz7bbbfcU6Chn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        <iframe class="videos" width="600" height="300" src="https://www.youtube.com/embed/puDBmnIXe_k?si=iTFOrJUodwR7bf7l" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <video controls class="videos"  src="Images/video1.mp4"></video>
+        <iframe class="videos" src="https://www.youtube.com/embed/PGX-JZjL96U?si=_po33gAxHAsc7P_o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        
+        <iframe class="videos" src="https://www.youtube.com/embed/HZWzn9geEqY?si=iEejz7bbbfcU6Chn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe class="videos"  src="https://www.youtube.com/embed/puDBmnIXe_k?si=iTFOrJUodwR7bf7l" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </div>
     </div>
   </section>
 
-  <section class="overall-news">
-<div class="news">
-    <div class="news-content">
-    <h4 class="news-title">Newsletter</h4>
-    <p class="news-description">Get your daily dose of travel news & tips. Sign up today!</p>
-    <div class="hori">
-      <br>
+   <!-- Newsletter Section -->
+   <div class="Newsletter-section">
+    <div class="news-from">
+      <h2 class="ccommon-title">Newsletter</h2>
+      <p class="tours-text">Get your daily dose of travel news & tips. Sign up today!</p>
+      <div class="hori">
+      <hr>
     </div>
-    
-
-    <form class="forming" action="">
-      <input class="sty" placeholder="Enter your name" type="text" name="" id="" required>
-    <input class="sty" placeholder="Enter your email" type="email" name="" id="" required>
-    <button  class="common-btn">Subscribe</button>
-    </form>
+      <input type="text" name="Name" id="" placeholder="Enter your name">
+      <input type="email" name="Email" id="email" placeholder="Enter your email">
+      <button class="common-btn subcribe">Subscribe</button>
+    </div>
+    <div class="discount-section">
+      <div class="discount-section-offer">
+        <h6>Tr@vel-Bangladesh.com</h6>
+        <h2 class="save">Save up to 70%</h2>
+      </div>
+    </div>
   </div>
-
-  <div class="news-poster">
-    <img src="Images/Rectangle 8 (1).png" alt="">
-  </div>
-  </div>
-  </section>
+</main>
     </main>
     <footer class="footer">
       <div class="final">
