final done final

--- a/index.html
+++ b/index.html
@@ -154,7 +154,8 @@
 
   <section>
     <div class="blog">
-      <h1 class="blog-title">See travel blogs</h1>
+      <h1 class="blog-title">See Travel Blogs</h1>
+      <div class="center-vid">
       <div class="blog-videos">
         <video controls class="videos"  src="Images/video1.mp4"></video>
         <iframe class="videos" src="https://www.youtube.com/embed/PGX-JZjL96U?si=_po33gAxHAsc7P_o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -163,9 +164,53 @@
         <iframe class="videos"  src="https://www.youtube.com/embed/puDBmnIXe_k?si=iTFOrJUodwR7bf7l" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </div>
     </div>
+    </div>
   </section>
 
-   <!-- Newsletter Section -->
+   <section><div class="discount-banner-image">
+    <div class="price-table">
+      <div class="icon-ber">
+        <p class="time new-itex"><i style="color: #FF5400; font-size: 24px; margin-right: 8px;" class="fa-solid fa-clock"></i>7 Day / 6 Night</p>
+        <p class="time"><i style="color: #FF5400; font-size: 24px; margin-right: 8px;" class="fa-solid fa-user-group"></i> Max : 10</p>
+        <p class="time"><i style="color: #FF5400; font-size: 24px; margin-right: 8px;" class="fa-solid fa-location-dot"></i> Malaysia</p>
+      </div>
+      <h3 class="Handpicked-title">Croatia Sailing Adventure</h3>
+      <p class="text">Embark on an enchanting Croatia sailing adventure with us and discover the Adriatic's hidden gems. Cruise along the azure waters.</p>
+        <h6 class="price-title">Price: $1300-$1500</h6>
+        <button class="common-btn">Book Now</button>
+    </div>
+  </div>
+  <div class="discount-banner-image margin-top">
+    <div class="price-table">
+      <div class="icon-ber">
+        <p class="time new-itex"><i style="color: #FF5400; font-size: 24px; margin-right: 8px;" class="fa-solid fa-clock"></i>7 Day / 6 Night</p>
+        <p class="time"><i style="color: #FF5400; font-size: 24px; margin-right: 8px;" class="fa-solid fa-user-group"></i> Max : 10</p>
+        <p class="time"><i style="color: #FF5400; font-size: 24px; margin-right: 8px;" class="fa-solid fa-location-dot"></i> Malaysia</p>
+      </div>
+      <h3 class="Handpicked-title">Essential Turkey</h3>
+      <p class="text">Explore the allure of Turkey, where ancient wonders seamlessly blend with vibrant modern life. From the iconic skyline of Istanbul, straddling two continents.</p>
+        <h6 class="price-title">Price: $2,482-$1,365</h6>
+        <button class="common-btn">Book Now</button>
+    </div>
+  </div>
+  <div class="discount-banner-image">
+    <div class="price-table">
+      <div class="icon-ber">
+        <p class="time new-itex"><i style="color: #FF5400; font-size: 24px; margin-right: 8px;" class="fa-solid fa-clock"></i>7 Day / 6 Night</p>
+        <p class="time"><i style="color: #FF5400; font-size: 24px; margin-right: 8px;" class="fa-solid fa-user-group"></i> Max : 10</p>
+        <p class="time"><i style="color: #FF5400; font-size: 24px; margin-right: 8px;" class="fa-solid fa-location-dot"></i> Malaysia</p>
+      </div>
+      <h3 class="Handpicked-title">5 Days Northern Lights</h3>
+      <p class="text">Embark on a mesmerizing 5-day journey into the Arctic Circle to witness the enchanting Northern Lights dance across the Arctic sky. Your adventure begins in a cozy Scandinavian lodge, </p>
+        <h6 class="price-title">Price: $949-$854</h6>
+        <button class="common-btn">Book Now</button>
+    </div>
+  </div>
+  <div class="new-btn-all">
+    <button class="common-btn sell-btn">See All Packages</button>
+  </div>
+</div>
+</section>
    <div class="Newsletter-section">
     <div class="news-from">
       <h2 class="ccommon-title">Newsletter</h2>
